# Traffic

./: .gitignore  App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  Car.cpp  Car.h  Cars.cpp  Cars.h  Clock.cpp  Clock.h  CreationRoad.cpp  CreationRoad.h  Crossing.cpp  Crossing.h  DestroyerRoad.cpp  DestroyerRoad.h  Event.cpp  Event.h  Highway.cpp  Highway.h  List.cpp  List.h  Makefile  NeutralRoad.cpp  NeutralRoad.h  Queue.cpp  Queue.h  Road.cpp  Road.h  Semaphore.cpp  Semaphore.h  Traffic.cpp  Traffic.sln  Traffic.vcxproj  Traffic.vcxproj.filters  UML.asta  UserIO.cpp  UserIO.h  cmake_install.cmake  (+2 more)
src/app/: App.cpp  App.h  CMakeLists.txt  Makefile  Traffic.cpp  cmake_install.cmake
src/data/: CMakeLists.txt  Car.cpp  Car.h  CarQueue.h  Clock.cpp  Clock.h  CreationRoad.cpp  CreationRoad.h  DestroyerRoad.cpp  DestroyerRoad.h  Event.cpp  Event.h  Logger.h  Makefile  NeutralRoad.cpp  NeutralRoad.h  Road.cpp  Road.h  Semaphore.cpp  Semaphore.h  SempahoreRingList.h  TextTable.h  UserIO.cpp  UserIO.h  cmake_install.cmake
src/structures/: CMakeLists.txt  Fila.h  LinkedList.h  LinkedQueue.h  Lista.h  Makefile  RingList.h  cmake_install.cmake
x64/Debug/: Traffic.ilk  Traffic.pch  vc141.idb
x64/Debug/Traffic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Traffic.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
